--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i");
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -28,6 +30,44 @@ h5, h6{
   :root {
     scroll-behavior: auto;
   }
+}
+
+.d-icons{
+  height: 20px; 
+  width: 20px;
+  -webkit-filter: invert(100%); /* Safari/Chrome */
+  filter: invert(100%);
+}
+
+.c-icons{
+  height: 20px; 
+  width: 20px;
+  padding: 4px;
+  filter: invert(51%) sepia(30%) saturate(5735%) hue-rotate(2deg) brightness(97%) contrast(104%);
+}
+
+.f-icons{
+  height: 50px;
+  width: 55px;
+}
+
+.s-icons{
+  height: 36px;
+  width: 36px;
+}
+
+.m-icon{
+  height: 25px;
+  width: 25px;
+  filter: invert(51%) sepia(30%) saturate(5735%) hue-rotate(2deg) brightness(97%) contrast(104%);
+}
+
+.u-icon{
+  margin-left: 9px;
+  margin-top: 7px;
+  height: 20px;
+  width: 20px;
+  filter: invert(100%);
 }
 
 
@@ -388,7 +428,7 @@ h5, h6{
   font-size: 48px;
   font-weight: 500;
   line-height: 56px;
-  color: #F56C00;
+  color: black;
   font-family: "Poppins", sans-serif;
 }
 
@@ -403,7 +443,7 @@ h5, h6{
   font-weight: 500;
   font-size: 15px;
   display: inline-block;
-  padding: 8px 24px 10px 46px;
+  padding: 8px 24px 10px 20px;
   border-radius: 3px;
   transition: 0.5s;
   color: #fff;
@@ -484,7 +524,7 @@ section {
   font-weight: 400;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #F56C00;
+  color: black;
   font-family: "Poppins", sans-serif;
 }
 
@@ -493,7 +533,7 @@ section {
   font-weight: 400;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #F56C00;
+  color: black;
   font-family: "Poppins", sans-serif;
 }
 
@@ -502,66 +542,31 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
-.breadcrumbs {
-  padding: 15px 0;
-  background-color: #f6f8fb;
-  min-height: 40px;
-}
-
-.breadcrumbs h2 {
-  font-size: 24px;
-  font-weight: 300;
-}
-
-.breadcrumbs ol {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-size: 14px;
-}
-
-.breadcrumbs ol li + li {
-  padding-left: 10px;
-}
-
-.breadcrumbs ol li + li::before {
-  display: inline-block;
-  padding-right: 10px;
-  color: #6c757d;
-  content: "/";
-}
-
-@media (max-width: 768px) {
-  .breadcrumbs .d-flex {
-    display: block !important;
-  }
-  .breadcrumbs ol {
-    display: block;
-  }
-  .breadcrumbs ol li {
-    display: inline-block;
-  }
-}
-
-/*--------------------------------------------------------------
 # App Features
 --------------------------------------------------------------*/
 .features .content {
   padding: 30px 0;
+  
 }
 
 .features .content .icon-box {
+  padding-top: 15px;
   margin-top: 25px;
+  border-radius: 16px;
+}
+
+.icon-box-main{
+  display: inline-flex;
+}
+
+.features .content .icon-box:hover{
+  box-shadow: 11px 11px 130px 70px rgba(206, 212, 224, 0.18);
 }
 
 .features .content .icon-box h4 {
   font-size: 20px;
   font-weight: 700;
-  margin: 5px 0 10px 60px;
+  margin: 0px 0px 10px 15px;
 }
 
 .features .content .icon-box i {
@@ -573,7 +578,8 @@ section {
 .features .content .icon-box p {
   font-size: 15px;
   color: #979aa1;
-  margin-left: 60px;
+  margin-left: 70px;
+  margin-top: -15px;
 }
 
 .image img{
@@ -953,6 +959,7 @@ section {
   border: 0;
   padding: 4px 8px;
   width: calc(100% - 100px);
+  outline: none;
 }
 
 #footer .footer-newsletter form input[type="submit"] {
@@ -1050,9 +1057,7 @@ section {
 
 #footer .footer-top .social-links a {
   font-size: 18px;
-  display: inline-block;
-  background: #F56C00;
-  color: #fff;
+  display: inline-block;  
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -1064,8 +1069,6 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #27282c;
-  color: #fff;
   text-decoration: none;
 }
 
